--- a/settings.html
+++ b/settings.html
@@ -18,6 +18,7 @@
       button {
         margin-left: 10px;
         font-size: 14px;
+        height: 36px;
       }
       #domain {
         width: 200px;
@@ -60,6 +61,14 @@
         margin-bottom: 20px;
         border-bottom: 1px solid #ccc;
       }
+      #agentsCode {
+        width: 300px;
+        height: 150px;
+      }
+      #loadAgentsButton {
+        margin: 0;
+        width: 80px;
+      }
     </style>
   </head>
   <body>
@@ -72,6 +81,16 @@
     </div>
     <button id="addAgentButton">Add Agent</button>
     <button id="saveButton">Save Changes</button>
+    <hr />
+
+    <h3>Load Agents from chrome bookmark code</h3>
+
+    <div>
+      <textarea id="agentsCode" placeholder=""></textarea>
+    </div>
+    <div>
+      <button id="loadAgentsButton">Load</button>
+    </div>
     <script src="settings.js"></script>
   </body>
 </html>
