fix: fixed the local port conversion logic

--- a/popup.html
+++ b/popup.html
@@ -53,7 +53,7 @@
       <div class="checkbox-container">
         <label for="autoPortConversion">
           <input type="checkbox" id="autoPortConversion">
-            conversion local port to <span id="portLabel"></span>
+            Conversion local port to <span id="portLabel"></span>
           </input>
         </label>
       </div>
