feat: remove code

--- a/popup.html
+++ b/popup.html
@@ -58,7 +58,7 @@
         justify-content: space-between;
       }
       .redirect-button {
-        width: 150px;
+        width: 180px;
         height: 30px;
         background-color: #007bff;
         color: white;
@@ -125,7 +125,7 @@
         <!-- Flags will be added here -->
       </ul>
       <div class="btn-container">
-        <button id="redirectBtn" class="redirect-button">Redirect with flags</button>
+        <button id="redirectBtn" class="redirect-button">Redirect with flags only</button>
         <a href="#" id="settingsLink">Settings</a>
       </div>
     </div>
