add setting link for cover page

--- a/popup.html
+++ b/popup.html
@@ -106,7 +106,8 @@
   </head>
   <body>
     <div id="coverArea" class="coverArea">
-      You can't use it on this page.
+      You can't use it on this page. 
+      <a href="#" id="settingsLink">Settings</a>
     </div>
     <div class="container">
       <div class="checkbox-container">
