add new link for cover page

--- a/popup.html
+++ b/popup.html
@@ -107,7 +107,7 @@
   <body>
     <div id="coverArea" class="coverArea">
       You can't use it on this page. 
-      <a href="#" id="settingsLink">Settings</a>
+      <a href="#" id="settingsLinkForCover">Settings</a>
     </div>
     <div class="container">
       <div class="checkbox-container">
