实现可以自定义path

--- a/settings.html
+++ b/settings.html
@@ -92,6 +92,11 @@
     <label>
       <input type="text" placeholder="port" id="port" />
     </label>
+    <h3>Path</h3>
+    <p>Path of you want to jump, '/app/lab/overview'</p>
+    <label>
+      <input type="text" placeholder="path" id="path" />
+    </label>
     <h3>Agents</h3>
     <div id="agentsContainer">
       <!-- Agents will be added here -->
