feat: Implement parameter management and UI enhancements in popup and settings
- Added new parameter management functionality to the extension, allowing users to manage and update parameters.
- Enhanced the popup UI by adding a new section for displaying and editing parameters.
- Updated the settings page to include a section for managing parameters, similar to the existing flags management.
- Implemented storage and state management for parameters, ensuring they are persisted and can be updated dynamically.
- Modified the redirection logic to include both flags and parameters in the generated URLs.
- Ensured backward compatibility by maintaining the existing flags functionality while introducing new parameters.

--- a/settings.html
+++ b/settings.html
@@ -76,6 +76,23 @@
       .flag-name {
         width: 200px;
       }
+      .param-row {
+        margin-bottom: 10px;
+      }
+      .param-row input {
+        height: 30px;
+        font-size: 14px;
+      }
+      .param-row button {
+        height: 36px;
+        width: auto;
+      }
+      .param-name {
+        width: 200px;
+      }
+      .param-value {
+        width: 200px;
+      }
     </style>
   </head>
   <body>
@@ -105,12 +122,21 @@
     <button id="saveButton" class="saveButton">Save Changes</button>
     <hr />
 
-    <h3>Flags</h3>
+    <h3>Flags (opty_)</h3>
     <div id="flagsContainer">
       <!-- Flags will be added here -->
     </div>
     <button id="addFlagButton">Add Flag</button>
     <button id="saveFlagButton" class="saveButton">Save Changes</button>
+
+    <hr />
+    
+    <h3>Parameters</h3>
+    <div id="paramsContainer">
+      <!-- Parameters will be added here -->
+    </div>
+    <button id="addParamButton">Add Parameter</button>
+    <button id="saveParamButton" class="saveButton">Save Changes</button>
 
     <script src="settings.js"></script>
   </body>
