--- a/popup.html
+++ b/popup.html
@@ -87,6 +87,38 @@
       .flag-true {
         color: green;
       }
+      .param-list {
+        list-style-type: none;
+        padding: 0;
+        margin: 7px;
+        overflow-y: auto;
+        max-height: 150px;
+      }
+      .param-list li {
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        border-bottom: 1px solid #f2f2f2;
+      }
+      .param-list li:hover {
+        background: #f9f9f9;
+      }
+      .param-value-input {
+        width: 80px;
+        height: 24px;
+        padding: 2px 5px;
+        border: 1px solid #ddd;
+        border-radius: 3px;
+        flex-shrink: 0;
+      }
+      .param-name {
+        margin-right: 10px;
+        flex-grow: 1;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        min-width: 0;
+      }
       .coverArea {
         display:none;
         align-items: center;
@@ -124,6 +156,10 @@
       <label for="flag-list">Flags: </label>
       <ul id="flagList" class="flag-list">
         <!-- Flags will be added here -->
+      </ul>
+      <label for="param-list">Parameters: </label>
+      <ul id="paramList" class="param-list">
+        <!-- Parameters will be added here -->
       </ul>
       <div class="btn-container">
         <button id="redirectBtn" class="redirect-button">Redirect with flags only</button>
