--- a/popup.html
+++ b/popup.html
@@ -51,6 +51,24 @@
       .checkbox-container input[type="checkbox"] {
         margin-right: 5px;
       }
+      .agent-select-container {
+        margin-bottom: 15px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid #f2f2f2;
+      }
+      .agent-select {
+        width: 100%;
+        height: 30px;
+        padding: 5px;
+        border: 1px solid #ddd;
+        border-radius: 3px;
+        background-color: white;
+        font-size: 14px;
+      }
+      .agent-select:focus {
+        outline: none;
+        border-color: #007bff;
+      }
       .btn-container,
       .flag-container {
         display: flex;
@@ -149,10 +167,12 @@
           </input>
         </label>
       </div>
-      <label for="agent-list">Impersonates: </label>
-      <ul id="agentList" class="agent-list">
-        <!-- Agents will be added here -->
-      </ul>
+      <div class="agent-select-container">
+        <label for="agentSelect">Impersonates: </label>
+        <select id="agentSelect" class="agent-select">
+          <option value="">Select an agent</option>
+        </select>
+      </div>
       <label for="flag-list">Flags: </label>
       <ul id="flagList" class="flag-list">
         <!-- Flags will be added here -->
